# Projects

./: README.md
BookManager/: .gitignore  CMakeLists.txt  main.cpp
BookManager/db/: database_manager.h
BookManager/domain/: book.cpp  entity.cpp  member.cpp  member.h
BookManager/repository/: borrow_record_repo.cpp  i_borrow_record_repo.h  member_repo.cpp
BookManager/service/: borrow_record_service.cpp  borrow_record_service.h  i_book_service.h  member_service.h
BookManager/ui/: console_ui.cpp  console_ui.h
BookManager_API/: CMakeLists.txt  main.cpp
BookManager_API/db/: database_manager.cpp
BookManager_API/domain/: book.h  borrow_record.cpp  borrow_record.h  entity.h
BookManager_API/repository/: book_repo.cpp  book_repo.h  borrow_record_repo.h  i_book_repo.h  i_member_repo.h  member_repo.h
BookManager_API/service/: book_service.cpp  book_service.h  i_borrow_record_service.h  i_member_service.h  member_service.cpp
C#-Games/: README.md
C#-Games/BalloonPop/: BalloonPop.sln  README.md
C#-Games/BattleShip/: BattleShip.sln  README.md
C#-Games/BinaryCalculatorQuizGame/: BinaryCalculatorQuizGame.sln  README.md
C#-Games/Boxing/: Boxing.sln  README.md
C#-Games/BreakOut/: BreakOut.sln  README.md
C#-Games/Butterfly Catching/: Butterfly Catching.sln  README.md
DeviceManager/: README.md
PythonProjects/B2B-SaaS_taskboard/backend/: pyproject.toml  taskboard.db
PythonProjects/B2B-SaaS_taskboard/backend/app/: main.py
PythonProjects/B2B-SaaS_taskboard/backend/app/api/: tasks.py  webhooks.py
PythonProjects/B2B-SaaS_taskboard/backend/app/core/: auth.py  config.py
PythonProjects/B2B-SaaS_taskboard/backend/app/schemas/: task.py
PythonProjects/Coding_Challenge_Generator/backend/: database.db  pyproject.toml  server.py
PythonProjects/Coding_Challenge_Generator/backend/src/: ai_generator.py  app.py  utils.py
PythonProjects/Coding_Challenge_Generator/backend/src/database/: db.py  models.py
PythonProjects/Coding_Challenge_Generator/backend/src/routes/: challenge.py
React/: README.md
minibank_api/: .gitignore  README.md  pom.xml
(+823 files in other folders)
